SERVER-30912 Only check out sessions for write commands